# pystdatm

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
pystdatm/: __init__.py  constants.py  stratopause.py  tropopause.py
scripts/: pystdatm_example_script.py  pystdatm_plot_script.py  pystdatm_table_script.py  script.py  test.py
src/pystdatm/: __init__.py  mesosphere.py  stratosphere.py  tropopause.py  troposphere.py
tests/: test_density.py  test_density_deviation.py  test_pressure.py  test_temperature.py
